# IO-lab1-character-device

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vagrantfile  ch_drv.c
cmake/: BuildKernelModule.cmake  FindKernelHeaders.cmake
src/: ch_drv.c
